fixed: Adjust header z-index when scroll down

--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -5,6 +5,7 @@
   width: 100%;
   height: 104px;
   background-color: $color-white;
+  z-index: 1;
 
   @media (max-width: $screen-tablet) {
     height: 84px;
